[Dynamic casting] Fix overrelease on unsuccessful cast to an Error type.

Fixes SR-9207 / rdar://problem/45961622, SR-10478 / rdar://problem/49906841,
and rdar://problem/50665156.